[project]
python = "^3.8"

[tool.poetry]
name = "nhs-eps-spine-client"
version = "0.0.1-alpha"
description = "NHS EPS Spine Client"
license = "MIT"
authors = [
    "Matthew Popat <matthew.popat1@nhs.net>",
    "Anthony Brown <anthony.brown8@nhs.net>",
    "Kris Szlapa <kris.szlapa1@nhs.net>",
    "Phil Gee <phil.gee@nhs.net>",
    "Adam Brown <adam.brown41@nhs.net>",
    "Jonathan Welch <jonathan.welch1@nhs.net>",
    "Natasa Fragkou <natasa.fragkou@nhs.net>",
    "Jack Spagnoli <jack.spagnoli1@nhs.net>",
    "Tom Smith <tom.smith24@nhs.net>",
    "Sean Steberis <sean.steberis2@nhs.net>",
    "Rizwan Mehmood <rizwan.mehmood1@nhs.net>",
    "Thomas Merrington <thomas.merrington1@nhs.net>",
]
readme = "README.md"
repository = "https://github.com/NHSDigital/nhs-eps-spine-client"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.40"
requests = "^2.31.0"
boto3 = "^1.34.62"
argparse = "^1.4.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
cfn-lint = "^0.83.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^23.11"
pip-licenses = "^4.3.3"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
